
Revision history for {{$dist->name}}

{{$NEXT}}

0.007     2021-02-03 05:18:44+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - some endpoint definitions needed updating to match the new config file keys

0.006     2021-02-02 05:18:17+08:00 Asia/Kuala_Lumpur
    New features:

    - support socket mode (https://api.slack.com/apis/connections/socket)
    - deprecated RTM, since it's going away in February
    - full set of Slack methods now supported, see Net::Async::Slack::Commands
    - unfurl support via socket mode (register a domain and provide callbacks
    for expanding URLs into blocks)

0.005     2020-11-26 15:11:14+08:00 Asia/Kuala_Lumpur
    New features:

    - support for blocks in `->send_message`

    Bugs fixed:

    - warning from the `->trigger_ping` method which was passing through
    an uneven list of parameters

0.004     2020-06-27 23:43:38+08:00 Asia/Kuala_Lumpur
    New features:

    - ->conversations_info for channel lookup

    Bugs fixed:

    - RTM connection handling fixed

0.003     2019-04-28 06:03:53+08:00 Asia/Kuala_Lumpur
    No new features.

    Bug fixes:

    - duplicate ::ReconnectUrl and ::ReconnectURL packages were present,
    only one of them is actually needed (thanks to NEILB for reporting)

0.002     2017-10-22 17:03:30+08:00 Asia/Kuala_Lumpur
    New features:

    * ::Message instance allowing support for updating messages
    * Slack threaded messaging support (via `thread_ts`)
    * Support for setting the `slack_host` for domains other than `slack.com`

0.001     2017-06-11 06:02:08+08:00 Asia/Kuala_Lumpur
    Initial version.