@@ -2,6 +2,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    [Bugs fixed]
+    - socket mode reconnection should be (more?) reliable now
 
 0.007     2021-02-03 05:18:44+08:00 Asia/Kuala_Lumpur
     No new features.
